# Machine_Learning_Coursera

./: .gitignore  README.md
machine-learning-ex1/haskell/: CHANGELOG.md  LICENSE  mlex1.cabal
machine-learning-ex1/haskell/app/: Main.hs
machine-learning-ex1/haskell/src/: RealArithmetic.hs  TinyMath.hs
machine-learning-ex1/octave/: machine-learning-ex1
machine-learning-ex1/octave/new/ex1/: ex1.m  plotData.m
machine-learning-ex1/python/: ex1.py  hed
