name:                  mlex1
version:               0.1.0.0
synopsis:              Coursera Machine Learning Excercise
author:                madjestic
maintainer:            madjestic13@gmail.com
copyright:             Vladimir Lopatin
category:              Math
build-type:            Simple
cabal-version:         >=2.0
                        
extra-source-files:    CHANGELOG.md
                       README.md

library
  exposed-modules:     TinyMath
                     , Arithmetic
                     , RealArithmetic
  build-depends:       base                ^>= 4.14.1.0
                     , Chart               ^>= 1.9.3
                     , Chart-cairo         ^>= 1.9.3
                                            
  hs-source-dirs:      src                  
  default-language:    Haskell2010          
                                            
                                            
executable mlex1                            
  main-is:             Main.hs              
  hs-source-dirs:                           
                       app                  
                     , src                  
  ghc-options:        -threaded -O2         
  --cpp-options:         -DDEBUG            
  build-depends:
                       base                ^>= 4.14.1.0
                     , bytestring          ^>= 0.11.1.0
                     , cassava             ^>= 0.5.2.0
                     , Chart               ^>= 1.9.3
                     , Chart-cairo         ^>= 1.9.3
                     , hmatrix             ^>= 0.20.0.0
                     , vector              ^>= 0.12.2.0                     

  other-modules:
                       Paths_mlex1
                     , TinyMath
  default-language:
                       Haskell2010
                                       
test-suite mlex1-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base                ^>= 4.14.1.0
                     , hmatrix             ^>= 0.20.0.0
